<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mp_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/betway_cred_guide"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/mp_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/textview.Title.Bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobile_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_marginTop="@dimen/mp_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cred"
        style="@style/OutlinedTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            style="@style/EditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/mp_16dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_mobile_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/OutlinedTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/EditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_credentials"
        android:layout_marginTop="@dimen/mp_16dp"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        style="@style/FilledButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>