<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mp_8dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/color_primary_light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/mp_8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/betway_cred"
                        android:textSize="16sp"
                        android:textAllCaps="true"
                        style="@style/textview.Title.Bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/betway_cred_guide"
                        style="@style/TextAppearance.Regular"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_set_credentials"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_credentials"
                        android:layout_marginTop="@dimen/mp_16dp"
                        style="@style/FilledButtonStyle"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mp_16dp"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mp_16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear"
                    android:textAllCaps="true" />

                <Space
                    android:layout_width="@dimen/mp_16dp"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/btn_comb_gen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/generate_comb"
                    android:textAllCaps="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_combinations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total Combinations"
                android:layout_marginTop="@dimen/mp_8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comb_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mp_8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>