<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/mp_8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_numbers_comb"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/mp_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/textview.Title.Bold"/>

        <TextView
            android:id="@+id/tv_delete_guide"
            style="@style/TextAppearance.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_numbers_delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select" />

        <TextView
            android:id="@+id/tv_select_numbers"
            style="@style/textview.Title.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/select_numbers"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_delete_guide" />

        <com.puzzle.industries.inumbr.components.AutoFitRecyclerView
            android:id="@+id/rv_number_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_16dp"
            android:columnWidth="@dimen/ball_width"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_numbers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
